tests/reject/var_hiding_param.ul
int foo(int x) {
    int x;
}

void main() {}